# trading-bot

./: .env.template  .gitignore  .venv  CLAUDE.md  LAUNCH_CHECKLIST.md  Makefile  SITEMAP.md  bot.sh  bot_api.py  calibration.py  check_m2b.py  check_m3.py  check_m5.py  config.py  config_utils.py  main.py  package-lock.json  package.json  polymarket_runner.py  process_health.py  pyproject.toml  requirements.txt  scan_worker.py  trading_bot_prd_v1_2.docx  watchdog.sh
.agents/skills/trading-bot/: SKILL.md
.claude/: ecc-tools.json  identity.json  launch.json
.codex/: AGENTS.md
.github/workflows/: build.yml
Delfibot/: README.md  dock-clean.sh  install.sh
Delfibot/bot/: .gitignore  README.md  calibration.py  config.py  config_utils.py  index.html  local_api.py  main.py  package-lock.json  package.json  polymarket_runner.py  process_health.py  pyproject.toml  tsconfig.json  vite.config.js  vite.config.ts
Delfibot/bot/db/: engine.py  logger.py  models.py
Delfibot/bot/engine/: archetype_classifier.py  connectivity_probe.py  device_id.py  diagnostics.py  equity_snapshot.py  learning_cadence.py  learning_diagnostics.py  license.py  llm_client.py  llm_providers.py  loop_watchdog.py  markout_tracker.py  notifier_state.py  pm_analyst.py  pm_reconciler.py  polymarket_evaluator.py  review_report.py  risk_manager.py  runtime_alerts.py  stats.py  user_config.py
Delfibot/bot/execution/: pm_executor.py  pm_redeemer.py  pm_sizer.py  position_exit.py
Delfibot/bot/feeds/: feed_health_monitor.py  macro_calendar.py  news_feed.py  polymarket_feed.py  polymarket_wallet.py  telegram_messages.py  telegram_notifier.py
Delfibot/bot/research/: fetcher.py  live_crypto.py  live_equity.py
Delfibot/bot/scripts/: build_app.sh  build_sidecar.sh  delfi_sidecar.spec  smoke_ddgs.py  smoke_research_match.py  smoke_sidecar.py
Delfibot/bot/src/: App.tsx  Onboarding.tsx  Performance.tsx  Settings.tsx  api.ts  global.d.ts  styles.css
Delfibot/bot/src-tauri/: .gitignore  Cargo.toml  build.rs  com.delfi.bot.plist.template  tauri.conf.json
Delfibot/bot/src-tauri/capabilities/: default.json
Delfibot/bot/src-tauri/icons/: icon.icns
Delfibot/bot/src-tauri/src/: main.rs
Delfibot/bot/src/components/: EquityChart.tsx  LicenseGate.tsx  SortableTh.tsx  UpdatePrompt.tsx
Delfibot/bot/src/lib/: archetypes.ts  format.ts
Delfibot/bot/src/pages/: Dashboard.tsx  Help.tsx  Intelligence.tsx  Performance.tsx  Positions.tsx  Risk.tsx  Settings.tsx
Delfibot/bot/tests/: test_research_fetcher.py  test_runtime_alerts.py
Delfibot/bot/tools/: backtest.py  test_pending_payout_guards.py
Delfibot/docs/: lemonsqueezy-email-template.md
Delfibot/research/skip_audit/: backfill_skipped_outcomes.py
Delfibot/research/wallet_spike/: .gitignore  analyze.py  deep_dive.py  pull_wallets.py  wallet_spike.md
Delfibot/scripts/: generate-license-keypair.mjs  owner-activate.py  sign-license.mjs
Delfibot/web/: .gitignore  README.md  next.config.ts  package-lock.json  package.json  postcss.config.mjs
Delfibot/web/app/: globals.css  layout.tsx  page.tsx
_archive/backtester/backtester/: backtest_engine.py  data_fetcher.py  fast_regime_classifier.py  run_backtest.py  run_sweep.py
_archive/diagnostics/: check_m4.py  check_okx.py
_archive/engine/: crypto_confirmation.py  decision_loop.py  execution_filter.py  macro_context.py  regime_classifier.py  strategist.py
_archive/execution/: position_monitor.py
_archive/feeds/: okx_ws.py
_archive/root/: claude_backtest.py
apps/bot/: .env.example  bot_api.py  calibration.py  config.py  main.py  polymarket_runner.py  railway.toml  requirements.txt
apps/bot/backtester/: forecast_backtester.py
apps/bot/db/: engine.py  logger.py  models.py
apps/bot/engine/: archetype_classifier.py  diagnostics.py  learning_cadence.py  markout_tracker.py  notifier_state.py  pm_analyst.py  polymarket_evaluator.py  review_report.py  risk_manager.py  user_config.py
apps/bot/execution/: pm_executor.py  pm_sizer.py
apps/bot/feeds/: feed_health_monitor.py  macro_calendar.py  news_feed.py  polymarket_feed.py  polymarket_wallet.py  telegram_messages.py  telegram_notifier.py
apps/bot/research/: fetcher.py  live_crypto.py  live_equity.py
apps/bot/tests/: test_archetype_classifier.py  test_archetype_multiplier_proposer.py  test_bot_api_positions.py  test_diagnostics.py  test_forecast_backtester.py  test_learning_cadence.py  test_learning_cadence_metadata.py  test_pm_sizer.py  test_polymarket_resolution_estimate.py  test_polymarket_scrub.py  test_polymarket_tag_fanout.py  test_review_report_fixes.py  test_risk_manager.py  (+2 more)
apps/web/: .env.example  .gitignore  package-lock.json  package.json  proxy.ts  vercel.json
backtester/: ev_backtester.py  forecast_backtester.py  indicator_cache.py  mock_regime_classifier.py  mock_ws_manager.py  pm_backtest.py
dashboard/: package.json
dashboard/app/: layout.tsx  not-found.tsx  page.tsx
dashboard/components/: AppShell.tsx  CalibrationPanel.tsx  GoLiveGate.tsx  PmDashboard.tsx  PositionsTable.tsx  Sidebar.tsx
dashboard/hooks/: use-container-size.ts
data/: macro_calendar.json
db/: logger.py  models.py
docs/: DEPLOYMENT_SETUP.md  MONOREPO_RESTRUCTURE_PLAN.md  trade_analysis.md
docs/resets/: RESET_20260421.md
engine/: analytics.py  diagnostics.py  directional_bias.py  event_overlay.py  fast_tier.py  learning_cadence.py  markout_tracker.py  memory.py  pm_analyst.py  polymarket_evaluator.py  portfolio_advisor.py  risk_engine.py  scanner.py  self_improvement.py  strategist.py  user_config.py  user_controls.py
execution/: order_manager.py  pm_executor.py  pm_sizer.py  position_monitor.py  risk_manager.py
feeds/: book_manager.py  deribit_feed.py  feed_health_monitor.py  macro_calendar.py  news_feed.py  polymarket_feed.py  telegram_messages.py  telegram_notifier.py
ops/supabase/: reset-2026-04-23.sql
research/: fetcher.py
tests/: test_archetype_classifier.py  test_ev_backtester.py  test_forecast_backtester.py  test_learning_cadence.py  test_learning_cadence_metadata.py  test_pm_sizer.py  test_polymarket_scrub.py  test_user_config.py
(+251 files in other folders)
