[project]
name = "delfi"
version = "0.1.0"
description = "Local Polymarket prediction-market trader (Python sidecar for the Tauri desktop app)."
requires-python = ">=3.11"

# Runtime dependencies. Kept narrow on purpose: PyInstaller has to bundle
# every transitive into the Tauri sidecar binary, so each new dep widens
# the installer download. The list below is what the SaaS bot used minus
# psycopg2 (no Postgres any more) and python-dotenv (env handling moved
# into config.py + the OS keychain).
dependencies = [
    # LLMs.
    "anthropic>=0.40",
    "google-genai>=0.3",

    # HTTP API + scheduler that the Tauri shell launches as a sidecar.
    "aiohttp>=3.9",
    "apscheduler>=3.10",

    # Local DB.
    "sqlalchemy>=2.0",

    # OS keychain for Polymarket private key + Anthropic API key.
    "keyring>=25",

    # Polymarket signing (offshore Polygon EIP-712).
    "py-clob-client>=0.20",
    "eth-account>=0.11",
    "web3>=6.20",

    # Research / data feeds.
    "requests>=2.31",
    "feedparser>=6.0",
    "ddgs>=8.0",
    "trafilatura>=1.10",
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    # PyInstaller bundles the sidecar into a single Tauri-callable binary.
    "pyinstaller>=6.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
