[project]
name = "delfi"
version = "0.1.0"
description = "Local Polymarket prediction-market trader (Python sidecar for the Tauri desktop app)."
requires-python = ">=3.11"

# Runtime dependencies. Kept narrow on purpose: PyInstaller has to bundle
# every transitive into the Tauri sidecar binary, so each new dep widens
# the installer download. The list below is what the SaaS bot used minus
# psycopg2 (no Postgres any more) and python-dotenv (env handling moved
# into config.py + the OS keychain).
dependencies = [
    # LLMs.
    "anthropic>=0.40",
    "google-genai>=0.3",

    # HTTP API + scheduler that the Tauri shell launches as a sidecar.
    "aiohttp>=3.9",
    "apscheduler>=3.10",

    # Local DB.
    "sqlalchemy>=2.0",

    # OS keychain for Polymarket private key + Anthropic API key.
    "keyring>=25",

    # Polymarket V2 signing (offshore Polygon EIP-712 against the V2
    # CTF Exchange `0xE111180000d2663C0091e4f400237545B87B996B`). The
    # original `py-clob-client` was V1-only and stopped working on
    # 2026-04-28 when Polymarket cut over to V2.
    "py-clob-client-v2>=1.0.0",
    "eth-account>=0.11",
    "web3>=6.20",

    # Research / data feeds.
    "requests>=2.31",
    "feedparser>=6.0",
    "ddgs>=8.0",
    "trafilatura>=1.10",
    "yfinance>=0.2.40",

    # Live crypto spot prices via OKX public endpoints. WITHOUT THIS,
    # research/live_crypto.py silently disables itself and crypto
    # markets get evaluated with no live price - the LLM hallucinates
    # one from training data (e.g. "BTC at $95k") and the bot makes
    # decisions on stale numbers. ccxt is heavy (~30 MB bundled) but
    # the alternative is wrong trades.
    "ccxt>=4.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    # PyInstaller bundles the sidecar into a single Tauri-callable binary.
    "pyinstaller>=6.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
