[package]
name = "delfi"
version = "0.1.0"
description = "Delfi - autonomous Polymarket trader (Tauri shell)"
authors = ["Delfi"]
edition = "2021"
rust-version = "1.77"

# Single binary. The webview is loaded into this process; the Python
# sidecar runs as a child process.
[[bin]]
name = "delfi"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 2 + the plugins we use:
#   - shell:  spawn the Python sidecar
#   - dialog: any native confirm prompts (e.g. quitting while a trade pends)
#   - opener: open external URLs in the user's browser
tauri        = { version = "2", features = [] }
tauri-plugin-shell  = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

# Standard async / serde stack.
tokio   = { version = "1", features = ["full"] }
serde   = { version = "1", features = ["derive"] }
serde_json = "1"
log     = "0.4"
once_cell = "1"
portpicker = "0.1"

[features]
# This feature gates `tauri::Builder::default()` to use the bundled
# webview frame on macOS / Windows / Linux. It must be turned on in
# release builds; cargo-tauri sets it for us.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic   = "abort"
codegen-units = 1
lto     = true
incremental = false
opt-level = "s"   # smaller binary; we don't need maximum perf in the shell
strip   = true
