[package]
name = "delfi"
version = "1.5.44"
description = "Delfi - autonomous Polymarket trader (Tauri shell)"
authors = ["Delfi"]
edition = "2021"
rust-version = "1.77"

# Single binary. The webview is loaded into this process; the Python
# sidecar runs as a child process.
[[bin]]
name = "delfi"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 2 + the plugins we use:
#   - shell:  spawn the Python sidecar
#   - dialog: any native confirm prompts (e.g. quitting while a trade pends)
#   - opener: open external URLs in the user's browser
tauri        = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell  = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
# Auto-updater. App polls a `latest.json` manifest hosted on the
# repo's GitHub Releases; if the manifest's version is newer than
# the running app, the user gets an in-app "Update available" prompt.
# Bundles are Ed25519-signed at CI time with the private key stored
# as a GH Actions secret; matching public key embedded in
# tauri.conf.json so the plugin verifies signatures locally before
# replacing the binary. macOS unsigned-app updates require code
# signing for in-place replacement; without it the mac update flow
# falls back to surfacing the latest .dmg URL for manual reinstall.
tauri-plugin-updater = "2"
# `process.relaunch()` for the auto-updater. After downloadAndInstall
# writes the new bundle, we call this to restart the GUI ourselves so
# the user doesn't have to manually quit + reopen Delfi.
tauri-plugin-process = "2"
# Single-instance enforcement for the GUI. When the user double-clicks
# the Delfi shortcut while a Delfi window is already running, the second
# .exe detects the first via a named pipe (Windows) / abstract socket
# (Linux) / process check (macOS), signals the first one to surface its
# window, then exits. Without this, two delfi.exe processes both probe
# for the sidecar and both attach to it: there's no data conflict (the
# sidecar singleton mutex prevents duplicate Python processes) but the
# user sees two GUIs both reading the same state, which is confusing.
tauri-plugin-single-instance = "2"

# Standard async / serde stack.
tokio   = { version = "1", features = ["full"] }
serde   = { version = "1", features = ["derive"] }
serde_json = "1"
log     = "0.4"
once_cell = "1"
portpicker = "0.1"

[features]
# This feature gates `tauri::Builder::default()` to use the bundled
# webview frame on macOS / Windows / Linux. It must be turned on in
# release builds; cargo-tauri sets it for us.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic   = "abort"
codegen-units = 1
lto     = true
incremental = false
opt-level = "s"   # smaller binary; we don't need maximum perf in the shell
strip   = true
